# routes/recipes.js
@@ -6,6 +6,18 @@ router.get("/", (req, res) => res.send("im here"));
 
 
 /**
+ * This path returns a full details of 3 random recipes
+ */
+router.get("/random", async (req, res, next) => {
+  try {
+      const random_recipes = await recipes_utils.getThreeRandomRecipes();
+      res.send(random_recipes);
+  } catch (error) {
+      next(error);
+  }
+});
+
+/**
  * This path returns a full details of a recipe by its id
  */
 router.get("/:recipeId", async (req, res, next) => {
@@ -17,16 +29,5 @@ router.get("/:recipeId", async (req, res, next) => {
   }
 });
 
-/**
- * This path returns a full details of 3 random recipes
- */
-router.post("/getThreeRandomRecipes", async (req, res, next) => {
-  try {
-    let random_3_recipes = await recipes_utils.getThreeRandomRecipes();
-    res.send(random_3_recipes);
-  } catch(error) {
-    next(error);
-  }
-});
 
 module.exports = router;
